Actions
Bug #10732
closedhsfs: NULL pointer errors
Start date:
2019-04-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/fs/hsfs/hsfs_rrip.c: In function 'rrip_namecopy': ../../common/sys/null.h:32:14: error: passing argument 9 of 'parse_sua' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/fs/hsfs/hsfs_rrip.c:475:31: note: in expansion of macro 'NULL' hdp, fsp, (uchar_t *)NULL, NULL); ^~~~ In file included from ../../common/fs/hsfs/hsfs_rrip.c:58:0: ../../common/sys/fs/hsfs_susp.h:251:12: note: expected 'int' but argument is of type 'void *' extern int parse_sua(uchar_t *, int *name_len_p, int *, uchar_t *, uint_t, ^~~~~~~~~ ../../common/fs/hsfs/hsfs_vfsops.c: In function 'hs_copylabel': ../../common/fs/hsfs/hsfs_vfsops.c:1438:18: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] hvp->vol_id[31] = NULL; ^ In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/fs/hsfs/hsfs_node.c:30: ../../common/fs/hsfs/hsfs_node.c: In function 'hs_parsedir': ../../common/sys/null.h:32:14: error: passing argument 9 of 'parse_sua' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/fs/hsfs/hsfs_node.c:1012:25: note: in expansion of macro 'NULL' (uchar_t *)NULL, NULL); ^~~~ In file included from ../../common/fs/hsfs/hsfs_node.c:57:0: ../../common/sys/fs/hsfs_susp.h:251:12: note: expected 'int' but argument is of type 'void *' extern int parse_sua(uchar_t *, int *name_len_p, int *, uchar_t *, uint_t, ^~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 55bd65d215875a92d72079986107cbda54b4ae78
commit 55bd65d215875a92d72079986107cbda54b4ae78 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-18T05:31:49.000Z 10732 hsfs: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions